k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8080
